--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,31 @@
-html
+<!--suppress HtmlUnknownTarget -->
+<DOCTYPE html="">
+<html lang="en" dir="ltr">
+<head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="initial-scale=1.0"/>
+    <title> Sharehouse: Home</title>
+    <!-- meta tags -->
+    
+    <!-- style files -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.3/dist/semantic.min.css">
+    <%- include('styles') %>
+
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+</head>
+<body>
+<div class="ui container fluid">
+    <div class="ui segment">
+        <img class="ui mini image" src="images/usravatar.png"> <span>Sharehouse</span>
+
+    </div>
+</div>
+
+    
+    <!-- scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.3/dist/semantic.min.js"></script>
+
+</body>
+</html>
+    
+    
