--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,31 +1,162 @@
 <!--suppress HtmlUnknownTarget -->
 <DOCTYPE html="">
-<html lang="en" dir="ltr">
-<head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="initial-scale=1.0"/>
-    <title> Sharehouse: Home</title>
-    <!-- meta tags -->
-    
-    <!-- style files -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.3/dist/semantic.min.css">
-    <%- include('styles') %>
+    <html lang="en" dir="ltr">
+    <head>
+        <meta charset="utf-8"/>
+        <meta name="viewport" content="initial-scale=1.0"/>
+        <title> Sharehouse: Home</title>
+        <!-- meta tags -->
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-</head>
-<body>
-<div class="ui container fluid">
-    <div class="ui segment">
-        <img class="ui mini image" src="images/usravatar.png"> <span>Sharehouse</span>
+        <!-- style files -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.3/dist/semantic.min.css">
+        <%- include('styles') %>
+
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    </head>
+    <body id="body">
+    <div class="ui container fluid">
+        <div class="ui segment brand">
+            <img class="ui mini image" src="images/shlogo.png"> <span class="brand"><bold>Sharehouse</bold></span>
+
+        </div>
+
 
     </div>
-</div>
 
-    
+    <div class="ui container inner">
+
+        <div class="ui labeled button" tabindex="0">
+            <div class="ui button add">
+                <i class="plus icon"></i>
+                <a href="/warehouses/add"> List a space </a>
+            </div>
+
+        </div>
+
+        <div class="ui right aligned grid">
+            <div class="left floated left aligned four wide column">
+                <div class="ui card">
+                    <div class="content">
+                        <div class="ui list">
+                            <div class="item"><a>My Profile</a></div>
+                            <div class="item"><a class="/warehouses/manage">Manage</a></div>
+                            <div class="item"><a>In Storage</a></div>
+                            <div class="item"><a>Messages</a></div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="right floated left aligned eleven wide column">
+                <div class="ui segment raised">
+                    <div class="ui grid">
+                        <div class="four wide column">
+                            <div class="ui image">
+                                <img class="ui medium image" src="images/amazonWH.png" alt="Warehouse">
+                            </div>
+                        </div>
+                        <div class="six wide column">
+                            <div class="ui list">
+                                <div class="item">Company Name</div>
+                                <div class="item">Company Location</div>
+                                <ol>
+                                    <div class="item">Warehouse Manager</div>
+                                    <div class="item">Warehouse Manager Contact</div>
+                                </ol>
+
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="ui right aligned grid">
+                        <div class="right floated right aligned six wide column">
+                            <button class="ui button">
+                                <a href="#"> Edit </a>
+                            </button>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <div class="ui right aligned grid details">
+            <div class="right floated left aligned eleven wide column">
+                <div class="ui segment wh-details">
+                    <div class="ui two column centered grid">
+                        <div class="column">Warehouse details</div>
+                    </div>
+                    <div class="ui segment raised">
+                        <div class="ui grid">
+                            <div class="four wide column">
+                                <div class="ui image">
+                                    <img class="ui medium image" src="images/amazonWH.png" alt="Warehouse">
+                                </div>
+                            </div>
+                            <div class="six wide column">
+                                <div class="ui list">
+                                    <div class="item"><strong>Warehouse Name</strong></div>
+                                    <ol>
+                                        <div class="item"><strong>Location: </strong>Industrial Area</div>
+                                        <div class="item"><strong>Area: </strong> 1800 sqm</div>
+                                        <div class="item"><strong>Empty space: </strong> 1200 sqm</div>
+                                        <div class="item"><strong>Price: </strong> $5/sqm/mo</div>
+                                    </ol>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="ui right aligned grid">
+                        <div class="right floated right aligned six wide column">
+                            <button class="circular ui icon button">
+                                <a href="/warehoses/add"> <i class="icon plus"></i> </a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="ui  vertical footer segment">
+            <div class="ui center aligned container">
+                <div class="ui stackable grid">
+                    <div class="three wide column">
+                        <h4 class="ui header">Companu</h4>
+                        <div class="ui link list">
+                            <a class="item" href="" target="_blank">About</a>
+                            <a class="item" href="" target="_blank">Contact</a>
+
+                        </div>
+                    </div>
+                    <div class="three wide column">
+                        <h4 class="ui header">Services</h4>
+                        <div class="ui link list">
+                            <a class="item" href="" target="_blank">Warehouse Listing</a>
+                            <a class="item" href="" target="_blank">Inventory management</a>
+                        </div>
+                    </div>
+                    <div class="seven wide right floated column">
+                        <h4 class="ui header">Social Media</h4>
+                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nulla erat, feugiat ut tempus luctus, volutpat vitae velit. Mauris et.</p>
+
+                    </div>
+                </div>
+                <div class="ui section divider"></div>
+                <div class="ui horizontal small divided link list">
+                    <a class="item" href="" target="_blank">Copyright &copy; <%= new Date().getFullYear();%></a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
     <!-- scripts -->
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.3/dist/semantic.min.js"></script>
 
-</body>
-</html>
+    </body>
+    </html>
     
     
