--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,3 +1,35 @@
 img.ui.mini.image{
     display: inline-block;
 }
+
+div.ui.segment.brand{
+    background-color: #000531;
+}
+
+span.brand{
+    color: #ffcf02;
+}
+
+
+
+div.ui.container.inner{
+    position: relative;
+    top: 60px;
+
+}
+
+div.ui.container.inner > div.ui.card.body{
+    float: right;
+}
+
+div.ui.right.aligned.grid{
+    margin-top: 5px;
+}
+
+div.ui.right.aligned.grid.details{
+    margin-top: 60px;
+}
+
+div.ui.segment.wh-details{
+    height: auto;
+}
