Bundle CSS together

--- a/views/styles.ejs
+++ b/views/styles.ejs
@@ -1,2 +1,2 @@
 <link rel="stylesheet" href="/stylesheets/styles.css">
-<link rel="icon" href="/images/">
+    <link rel="icon" href="images/icons/favicon.ico">
