--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
     <body id="body">
     <div class="ui container fluid">
         <div class="ui segment brand">
-            <img class="ui mini image" src="images/shlogo.png"> <span class="brand"><bold>Sharehouse</bold></span>
+            <img class="ui medium image" src="images/sh_text.png">
 
         </div>
 
