--- a/views/styles.ejs
+++ b/views/styles.ejs
@@ -1,2 +1,2 @@
 <link rel="stylesheet" href="/stylesheets/styles.css">
-    <link rel="icon" href="images/icons/favicon.ico">
+<link rel="shortcut icon" type="image/png" href="/images/logo.png"/>
