Install the scripts

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -43,14 +43,14 @@
             </form>
 
             <div class="ui message">
-                New to us? <a href="/users/new">Register</a>
+                New to us? <a href="/users/register">Register</a>
             </div>
         </div>
     </div>
 
     <!-- scripts -->
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.3/dist/semantic.min.js"></script>
-    <script src="javascripts/login.js"></script>
+    <script src="/javascripts/login.js"></script>
 
     </body>
     </html>
