--- a/views/styles.ejs
+++ b/views/styles.ejs
@@ -1,2 +1,2 @@
 <link rel="stylesheet" href="/stylesheets/styles.css">
-<link rel="shortcut icon" type="image/png" href="/images/logo.png"/>
+<link rel="shortcut icon" type="image/png" href="/images/shlogo.png"/>
