--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,7 +26,7 @@
                     <div class="field">
                         <div class="ui left icon input">
                             <i class="user icon"></i>
-                            <input type="text" name="email" placeholder="E-mail address">
+                            <input type="text" name="email" placeholder="Email">
                         </div>
                     </div>
                     <div class="field">
