--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,5 @@
 <!--suppress HtmlUnknownTarget -->
-<DOCTYPE html="">
+<!DOCTYPE html>
     <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8"/>
@@ -13,7 +13,7 @@
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     </head>
-    <body id="body">
+    <body>
     <div class="ui middle aligned center aligned grid" style="height: 100%;">
         <div class="column " style="width: 45%;">
             <h2 class="ui image header" style="margin-top: -100px">
@@ -50,7 +50,7 @@
 
     <!-- scripts -->
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.3/dist/semantic.min.js"></script>
-    <script src="/javascripts/login.js"></script>
+    <script src="/javascripts/login.js" type="text/javascript"></script>
 
     </body>
     </html>
