--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -38,8 +38,8 @@
                     <div class="content">
                         <div class="ui list">
                             <div class="item"><a href="#">My Profile</a></div>
-                            <div class="item"><a href="/warehouses/listings">Manage</a></div>
-                            <div class="item"><a>In Storage</a></div>
+                            <div class="item"><a href="/warehouses/manage">Manage</a></div>
+                            <div class="item"><a href="/warehouses/store">In Storage</a></div>
                             <div class="item"><a>Messages</a></div>
                         </div>
                     </div>
